[package]
name = "libmprompt-sys"
version = "0.1.0"
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
plain-c = []
debug = []
mpeff = []

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
bindgen = { version = "0.53.1" }
cmake = { version = "0.1" }